--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -3,7 +3,7 @@
     <%# ログインしているときは以下を表示する %>
       <% if user_signed_in? %>
         <div class="greeting">
-        こんにちは、<%= link_to current_user.name, "/prototypes/:prototype_id/users/:id", class: :greeting__link%> さん
+        こんにちは、<%= link_to current_user.name, user_path(current_user), class: :greeting__link%> さん
         </div>
       <% end %>
         <div class="card__wrapper">
