--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -1,13 +1,15 @@
 <main class="main">
   <div class="inner">
     <%# ログインしているときは以下を表示する %>
+      
       <% if user_signed_in? %>
         <div class="greeting">
-        こんにちは、<%= link_to current_user.name, user_path(current_user), class: :greeting__link%> さん
+        こんにちは、<%= link_to current_user.name, user_path(current_user.id), class: :greeting__link%> さん
         </div>
       <% end %>
+
         <div class="card__wrapper">
-          <%= render partial: "prototype", collection: @prototypes %>
+        <%= render partial: "prototype", collection: @prototypes %>
     </div>
   </div>
 </main>
